	  (#175)

	* Fix crash bug when client shuts down correctly. (#176)

	* Allow multi-character prefixes for users in channels.

	* Support EXTBAN parameter in 005 lines.

	* Handle 008 responses.

	* Cache more than just the first result returned in RPL_USERHOST.

	* Fix hostmask and response code returned by USERHOST in administration 
	  network.

	* Fix timestamp marshalling. (#180)

Ctrlproxy 3.0.5 2007-12-07

  IMPROVEMENTS
  
    * Integrate auto-away module into the core.

    * New settings ``autosave'', ``replication'', ``learn-nickserv'', 
      ``learn-network-name'', ``admin-log'', ``admin-user''.

    * Warn about unknown configuration file settings. (#15)

    * Support prefixing all lines with the time ("report-time = always"). (#169)

    * Allow using expansions in log file names for irssi. (#149)

  BUG FIXES

    * Handle 275 response correctly.

    * Fix memory error. (#170)

    * Fix several memory leaks.

Ctrlproxy 3.0.4 2007-11-24

  IMPROVEMENTS

    * Add ctrlproxy-admin command for command-line access to the admin network.

    * Send message to the client when ctrlproxy connects to the network.

    * Announce number of clients/channels during client login. (#162)

    * Add "set" command in the administration interface, including 
      initial settings "log_level", "motd-file" and "report-time". (#6)

    * Add "default-network" setting.

  BUG FIXES
    
    * Don't allow disconnect of admin network. (#164)

    * Clearer error messages during disconnect.

    * Handle ping timeouts from server. (#158)

    * Don't crash when network of listener goes away. (#168)

    * Don't abort when sending colon to listener. (#167)

    * Handle 263 response correctly.

    * Properly send non-data lines when using repl_lastdisconnect. (#146)

    * No longer "skip" users on reconnect. (#146)

    * Check for empty argument to /CTRLPROXY BACKLOG (#132)

    * Integrate some more standard replication backends. 
