@@ -59,9 +59,10 @@ static struct query queries[] = {
 		{ RPL_WHOISUSER, RPL_WHOISCHANNELS, RPL_AWAY,
 		  RPL_WHOISIDLE, RPL_WHOISCHANNELS, RPL_WHOISIP,
 		  RPL_WHOISSERVER, RPL_WHOISOPERATOR, RPL_WHOISACTUALLY,
-		  RPL_WHOISSSL, RPL_WHOISACCOUNT, RPL_WHOISIDENTIFIED, 0 }, 
+		  RPL_WHOISSSL, RPL_WHOISACCOUNT, RPL_WHOISIDENTIFIED, 
+		  ERR_NOSUCHNICK, 0 }, 
 		{ RPL_ENDOFWHOIS, RPL_TRYAGAIN, 0 }, 
-		{ ERR_NOSUCHSERVER, ERR_NONICKNAMEGIVEN, ERR_NOSUCHNICK, 0 },
+		{ ERR_NOSUCHSERVER, ERR_NONICKNAMEGIVEN, 0 },
 		handle_default
 	},
 
@@ -100,9 +101,9 @@ static struct query queries[] = {
 	
  /* WHOWAS <nickname> [<count> [<server>]]*/
 	{"WHOWAS", 
-		{ RPL_WHOWASUSER, RPL_WHOISSERVER, RPL_WHOWAS_TIME, 0 },
+		{ RPL_WHOWASUSER, RPL_WHOISSERVER, RPL_WHOWAS_TIME, ERR_WASNOSUCHNICK, 0 },
 		{ RPL_ENDOFWHOWAS, RPL_TRYAGAIN, 0 },
-		{ ERR_NONICKNAMEGIVEN, ERR_WASNOSUCHNICK, 0 },
+		{ ERR_NONICKNAMEGIVEN, 0 },
 		handle_default
 	},
 	
